Fix toc being too small in some situations

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -82,6 +82,7 @@ main, aside
   padding-right: 0 !important 
   
 aside
+  width: 100%
   @media screen and (min-width: $break-medium)
     position: absolute
     overflow-y: auto
